fixed issue on firefox

--- a/contact.css
+++ b/contact.css
@@ -53,9 +53,13 @@ label {
     font-family: fantasy, sans-serif;
 }
 
+input {
+    width: 250px;
+}
+
 input, #info {
     margin-top: 15px;
-    width: 250px;
+
     height: 30px;
     font-size: 15px;
 }
@@ -77,7 +81,7 @@ input, #info {
 }
 
 .first {
-    margin-right: 50px;
+    margin-right: 45px;
 }
 
 .negativeMargin {
@@ -94,7 +98,7 @@ input, #info {
 }
 
 #submitButton {
-    font-size: 50px;
+    font-size: 20px;
     width: 100px;
 }
 
